jobs associated with instances; instances associated with workspaces
