# service/src/main/java/org/databiosphere/workspacedataservice/generated/CollectionsApi.java
@@ -1,0 +1,78 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (6.6.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package org.databiosphere.workspacedataservice.generated;
+
+import org.databiosphere.workspacedataservice.generated.CollectionServerModel;
+import java.util.UUID;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
+@Validated
+@Tag(name = "Collections", description = "Collection APIs")
+public interface CollectionsApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    /**
+     * GET /collection/v1/{workspaceId} : List all collections in the given workspace.
+     * Collection f/k/a instance. Requires read permission on the workspace.
+     *
+     * @param workspaceId Workspace id (required)
+     * @return Success (status code 200)
+     */
+    @Operation(
+        operationId = "listCollectionsV1",
+        summary = "List all collections in the given workspace.",
+        description = "Collection f/k/a instance. Requires read permission on the workspace.",
+        tags = { "Collections" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Success", content = {
+                @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = CollectionServerModel.class)))
+            })
+        },
+        security = {
+            @SecurityRequirement(name = "bearerAuth")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/collection/v1/{workspaceId}",
+        produces = { "application/json" }
+    )
+    default ResponseEntity<List<CollectionServerModel>> listCollectionsV1(
+        @Parameter(name = "workspaceId", description = "Workspace id", required = true, in = ParameterIn.PATH) @PathVariable("workspaceId") UUID workspaceId
+    ) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
