# service/src/main/java/org/databiosphere/workspacedataservice/model/WorkspaceId.java
@@ -1,0 +1,5 @@
+package org.databiosphere.workspacedataservice.model;
+
+import java.util.UUID;
+
+public record WorkspaceId(UUID id) {}
